crates/config/tests/snapshots/trailing_spaces_stripped.snap
---
source: crates/config/tests/snapshots.rs
---
# trailing-spaces-stripped

## Input

```mical
a hello 
b true  
c 42 

```

## JSON

```json
{
  "a": "hello",
  "b": true,
  "c": 42
}
```

vim:ft=markdown
