crates/config/tests/snapshots/typed_values.snap
---
source: crates/config/tests/snapshots.rs
---
# typed-values

## Input

```mical
a true
b false
x 42
y -10
z +7
hex 0xFF

```

## JSON

```json
{
  "a": true,
  "b": false,
  "x": 42,
  "y": -10,
  "z": 7,
  "hex": 255
}
```

vim:ft=markdown
