crates/config/tests/snapshots/value_boolean.snap
---
source: crates/config/tests/snapshots.rs
---
# value-boolean

## Input

```mical
a true
b false

```

## JSON

```json
{
  "a": true,
  "b": false
}
```

vim:ft=markdown
