crates/config/tests/snapshots/value_boolean_fallback.snap
---
source: crates/config/tests/snapshots.rs
---
# value-boolean-fallback

## Input

```mical
a trueish
b falsehood
c true value
d false value

```

## JSON

```json
{
  "a": "trueish",
  "b": "falsehood",
  "c": "true value",
  "d": "false value"
}
```

vim:ft=markdown
