crates/config/tests/snapshots/value_integer_radixes.snap
---
source: crates/config/tests/snapshots.rs
---
# value-integer-radixes

## Input

```mical
a 0
b 42
c +1
d -1
e 0xFF
f 0b1010
g 0o777
h 1_000
i 0xDEAD_BEEF

```

## JSON

```json
{
  "a": 0,
  "b": 42,
  "c": 1,
  "d": -1,
  "e": 255,
  "f": 10,
  "g": 511,
  "h": 1000,
  "i": 3735928559
}
```

vim:ft=markdown
