crates/config/tests/snapshots/value_line_string_midquote_comment.snap
---
source: crates/config/tests/snapshots.rs
---
# value-line-string-midquote-comment

## Input

```mical
a value "x # y" tail

```

## JSON

```json
{
  "a": "value \"x"
}
```

vim:ft=markdown
