crates/config/tests/snapshots/value_quoted_hash_inside.snap
---
source: crates/config/tests/snapshots.rs
---
# value-quoted-hash-inside

## Input

```mical
msg "before # after"

```

## JSON

```json
{
  "msg": "before # after"
}
```

vim:ft=markdown
