crates/config/tests/snapshots/value_typed_with_inline_comment.snap
---
source: crates/config/tests/snapshots.rs
---
# value-typed-with-inline-comment

## Input

```mical
a 42 # count
b true # enabled

```

## JSON

```json
{
  "a": 42,
  "b": true
}
```

vim:ft=markdown
